# Harm_status_Plotly

./: README.md  app.py  pyproject.toml
dash_app/: app.py
dash_app/pages/: table.py
pages/: plot.py  table.py
